[package]
name = "rust-blogpost-auth-async"
authors = ["omaraparicio07@gmail.com"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
argon2 = "0.5.3"
chrono = { version = "0.4.34", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.2"
jsonwebtoken = "9.2.0"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
